--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.7",
+    "@mui/x-data-grid": "^5.17.5",
     "mongoose": "^6.5.4",
     "next": "12.2.5",
     "react": "18.2.0",
